--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,10 @@
 	</properties>
 
 	<build>
-		<sourceDirectory>src</sourceDirectory>
+		<sourceDirectory>processing4\core\src</sourceDirectory>
 		<resources>
 			<resource>
-				<directory>src</directory>
+				<directory>processing4\core\src</directory>
 				<excludes>
 					<exclude>**/*.java</exclude>
 				</excludes>
@@ -27,9 +27,10 @@
 
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.8.1</version>
+				<version>3.9.0</version>
 				<configuration>
-					<release>11</release>
+					<source>17</source>
+					<target>17</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -51,7 +52,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.2.0</version>
+				<version>3.3.1</version>
 				<configuration>
 					<doclint>none</doclint> <!--Prevent Javadoc incomplete errors -->
 				</configuration>
@@ -72,7 +73,7 @@
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
-			<version>15.0.1</version>
+			<version>17.0.2</version>
 		</dependency>
 
 		<dependency>
