--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.processing</groupId>
 	<artifactId>core</artifactId>
-	<version>4.0b4</version>
+	<version>4.0b6</version>
 	<name>Processing Core</name>
 
 	<properties>
@@ -68,19 +68,6 @@
 		</plugins>
 	</build>
 
-	<repositories>
-		<repository>
-			<id>jzy3d-snapshots</id>
-			<name>Jzy3d Snapshots</name>
-			<url>https://maven.jzy3d.org/snapshots/</url>
-		</repository>
-		<repository>
-			<id>jzy3d-releases</id>
-			<name>Jzy3d Releases</name>
-			<url>https://maven.jzy3d.org/releases/</url>
-		</repository>
-	</repositories>
-
 	<dependencies>
 
 		<dependency>
@@ -90,14 +77,13 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.jogamp.jogl</groupId>
+			<groupId>me.friwi</groupId>
 			<artifactId>jogl-all</artifactId>
 			<version>v2.4.0-rc-20210111</version>
 		</dependency>
 
-
 		<dependency>
-			<groupId>org.jogamp.gluegen</groupId>
+			<groupId>me.friwi</groupId>
 			<artifactId>gluegen-rt</artifactId>
 			<version>v2.4.0-rc-20210111</version>
 		</dependency>
