--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,16 @@
 	</properties>
 
 	<build>
+		<sourceDirectory>processing4\core\src</sourceDirectory>
 		<resources>
 			<resource>
 				<directory>processing4\core\src</directory>
-			</resource>
-			<resource>
-				<directory>processing4-javafx\src</directory>
+				<excludes>
+					<exclude>**/*.java</exclude>
+				</excludes>
 			</resource>
 		</resources>
-		
+
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -31,6 +32,25 @@
 					<release>11</release>
 					<encoding>UTF-8</encoding>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>3.3.0</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<source>processing4-javafx/src/</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>  <!-- Create sources.jar -->
 				<groupId>org.apache.maven.plugins</groupId>
