--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.jogamp.jogl</groupId>
-			<artifactId>jogl-all</artifactId>
+			<artifactId>jogl-all-main</artifactId>
 			<version>2.4.0-rc-20230123</version>
 		</dependency>
 		<dependency>
