--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,7 @@
 		<sourceDirectory>processing4\core\src</sourceDirectory>
 		<resources>
 			<resource>
-				<directory>processing4\core\src</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-				</excludes>
+				<directory>processing4/core/src/processing/opengl/shaders/</directory>
 			</resource>
 		</resources>
 		<plugins>
