--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: 17
       - name: Cache SonarCloud packages
         uses: actions/cache@v2
