--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -38,11 +38,119 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B -Puber-jar verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-      - name: Compile Test Sketch
+      - name: Compile Runtime Test
         run: |
           JAR_FILE=$(ls target/core-*.jar | grep -v javadoc | grep -v sources)
           javac -cp $JAR_FILE RuntimeTest.java
-      - name: Run Test Sketch
+      - name: Run Runtime Test
+        run: |
+          JAR_FILE=$(ls target/core-*.jar | grep -v javadoc | grep -v sources)
+          java -cp $JAR_FILE:. RuntimeTest
+      - uses: actions/upload-artifact@v2
+        with:
+          name: core
+          path: target/*.jar
+name: Build
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
+jobs:
+  build:
+    name: Build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: 17
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B -Puber-jar verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+      - name: Compile Runtime Test
+        run: |
+          JAR_FILE=$(ls target/core-*.jar | grep -v javadoc | grep -v sources)
+          javac -cp $JAR_FILE RuntimeTest.java
+      - name: Run Runtime Test
+        run: |
+          JAR_FILE=$(ls target/core-*.jar | grep -v javadoc | grep -v sources)
+          java -cp $JAR_FILE:. RuntimeTest
+      - uses: actions/upload-artifact@v2
+        with:
+          name: core
+          path: target/*.jar
+name: Build
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    types: [opened, synchronize, reopened]
+jobs:
+  build:
+    name: Build
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: 17
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build and analyze
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B -Puber-jar verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+      - name: Echo JAR File
+        run: |
+          JAR_FILE=$(ls target/core-*.jar | grep -v javadoc | grep -v sources)
+          echo $JAR_FILE
+      - name: Compile Runtime Test
+        run: |
+          JAR_FILE=$(ls target/core-*.jar | grep -v javadoc | grep -v sources)
+          javac -cp $JAR_FILE RuntimeTest.java
+      - name: Run Runtime Test
         run: |
           JAR_FILE=$(ls target/core-*.jar | grep -v javadoc | grep -v sources)
           java -cp $JAR_FILE:. RuntimeTest
