--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 			<resource>
 				<directory>processing4\core\src</directory>
 				<includes>
-				  	<include>**\processing\opengl\shaders\</include>
+					<include>**\processing\opengl\shaders\</include>
 					<include>**\processing\opengl\cursors\</include>
 					<include>**\processing\core\libDifferent.jnilib</include>
 				</includes>
@@ -27,7 +27,7 @@
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.10.0</version>
+				<version>3.13.0</version>
 				<configuration>
 					<release>17</release>
 					<encoding>UTF-8</encoding>
@@ -40,7 +40,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>3.3.0</version>
+				<version>3.6.0</version>
 				<executions>
 					<execution>
 						<id>add-source</id>
@@ -65,7 +65,7 @@
 				<!-- Create sources.jar -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
-				<version>3.2.1</version>
+				<version>3.3.1</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -148,7 +148,7 @@
 		<dependency>
 			<groupId>org.openjfx</groupId>
 			<artifactId>javafx-controls</artifactId>
-			<version>21</version>
+			<version>23-ea+22</version>
 		</dependency>
 		<dependency>
 			<groupId>org.jogamp.jogl</groupId>
