--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
 		</resources>
 		<plugins>
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-wrapper-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<mavenVersion>3.9.7</mavenVersion>
+				</configuration>
+			</plugin>
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.13.0</version>
 				<configuration>
@@ -94,7 +102,7 @@
 			<plugin> <!-- for test running -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>3.3.1</version>
 			</plugin>
 		</plugins>
 	</build>
