--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -55,7 +55,7 @@ jobs:
 
       - uses: actions/upload-artifact@v4
         with:
-          name: core
+          name: core-${{ runner.os }}
           path: target/*.jar
           retention-days: 7
         timeout-minutes: 5
